# math

./: README.md
C_Cpp/: CMakeLists.txt  binomio.c  exp.cpp  pow.cpp
C_Cpp/code/public/include/: math.hpp
C_Cpp/code/public/src/: PrimeUtils.cpp  exp.cpp  pow.cpp
C_Cpp/playground/: CMakeLists.txt
C_Cpp/playground/code/: main.cpp
Python/: pow.py  taylor.py  utils.py  vector.py
Python/Graphic/: tg_sec.py
Python/NumberTheory/: euclidian.py  omu40_fase1.ipynb  requirements.txt
Python/NumberTheory/common/: __init__.py  util.py
Python/NumberTheory/primes/: __init__.py  factors.py  test_util.py  util.py
Python/jupyter_tests/: vector.ipynb
